# multiGPT

./: .gitignore  DO.md  README.md  launch.py  pyproject.toml  requirements.txt  server_setup.sh.txt  train.py
configs/: gpt2.yaml
docs/: do_technical_optimization.md  failure_playbook.md  parallel_layouts.md  tutorial_training_system.md
picotron/: checkpoint.py  data.py  monitor.py  profiling.py  utils.py
picotron/context_parallel/: cp_communications.py
picotron/data_parallel/: bucket.py
picotron/model/: gpt2.py  train_tokenizer.py
picotron/pipeline_parallel/: pipeline_parallel.py  pp_communications.py
picotron/tensor_parallel/: tensor_parallel.py  tp_communications.py
profiles/torch_tp2_verify/rank0/: rank0.1773565050963176466.pt.trace.json
profiles/torch_tp2_verify/rank1/: rank1.1773565050963598019.pt.trace.json
profiles/torch_uv_smoke/rank0/: rank0.1773564251646677551.pt.trace.json
tokenizer_gpt2_2000/: merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
tools/: run_nsys.sh  run_torchprofile.sh
